--- a/bleach.fish/src/index.css
+++ b/bleach.fish/src/index.css
@@ -67,7 +67,8 @@ p, a {
 }
 
 .h1 {
-  font-size: 2.3em;
+  font-size: 2em;
+  margin-bottom: 15px;
 }
 
 .h2 {
@@ -166,7 +167,7 @@ a {
 }
 
 .song-grid {
-  padding: 10px;
+  padding: 20px;
 }
 
 /* Responsive Design */
