--- a/bleach.fish/src/index.css
+++ b/bleach.fish/src/index.css
@@ -12,7 +12,7 @@ body {
   margin: 2em;
   overflow: hidden;
   background-color: black;
-  background-image: url('/assets/background.png');
+  background-image: url('./public/background.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
