--- a/bleach.fish/src/index.css
+++ b/bleach.fish/src/index.css
@@ -12,13 +12,24 @@ body {
   margin: 2em;
   overflow: hidden;
   background-color: black;
-  background-image: url('/background.png');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  background-image: url('/desktop-left.png'), url('/desktop-right.png');
+  background-position: left top, right top;
+  background-repeat: no-repeat, no-repeat;
+  background-size: auto 100%, auto 100%;
+  background-attachment: fixed, fixed;
   min-height: 100svh;
 }
+
+@media (max-width: 668px) {
+  body {
+    background-image: url('/mobile.png');
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    background-attachment: fixed;
+  }
+}
+
 @font-face {
   font-family: 'LoveLetter';
   src: url('/fonts/LoveLetterTW.woff2') format('woff2');
