--- a/bleach.fish/src/index.css
+++ b/bleach.fish/src/index.css
@@ -2,6 +2,8 @@
 :root {
   --primary-color: rgb(172, 172, 172);
   --secondary-color: rgb(77, 77, 77);
+  --desktop-left-width: min(44vw, 72vh);
+  --desktop-left-content-gap: 24px;
 }
 
 html, body {
@@ -12,13 +14,24 @@ body {
   margin: 2em;
   overflow: hidden;
   background-color: black;
-  background-image: url('/background.png');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  background-image: url('/desktop-left.png'), url('/desktop-right.png');
+  background-position: left top, right top;
+  background-repeat: no-repeat, no-repeat;
+  background-size: auto 100%, auto 100%;
+  background-attachment: fixed, fixed;
   min-height: 100svh;
 }
+
+@media (max-width: 668px) {
+  body {
+    background-image: url('/mobile.png');
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-attachment: fixed;
+  }
+}
+
 @font-face {
   font-family: 'LoveLetter';
   src: url('/fonts/LoveLetterTW.woff2') format('woff2');
@@ -135,7 +148,7 @@ a {
   font-size: 20px;
   position: fixed;
   bottom: 20px;
-  left: 30px;
+  left: calc(var(--desktop-left-width) + var(--desktop-left-content-gap));
 }
 
 .track-container {
@@ -150,7 +163,7 @@ a {
 
 
 .wrapper {
-  left: 40px;
+  left: calc(var(--desktop-left-width) + var(--desktop-left-content-gap));
   top: 40px;
   position: fixed;
 }
