--- a/site/src/index.css
+++ b/site/src/index.css
@@ -2,8 +2,14 @@
 :root {
   --primary-color: rgb(172, 172, 172);
   --secondary-color: rgb(77, 77, 77);
-  --desktop-left-width: min(44vw, 72vh);
-  --desktop-left-content-gap: clamp(24px, 3vw, 48px);
+  --side-image-width: clamp(180px, 24vw, 320px);
+  --center-lane-gap: clamp(24px, 4vw, 56px);
+  --content-lane-width: min(620px, calc(100vw - (2 * (var(--side-image-width) + var(--center-lane-gap))) - 4rem));
+  --media-width: clamp(130px, 32vw, 220px);
+  --post-media-width: clamp(200px, 42vw, 320px);
+  --times-text-size: 20px;
+  --desktop-left-width: var(--side-image-width);
+  --desktop-left-content-gap: var(--center-lane-gap);
 }
 
 html, body {
@@ -17,7 +23,7 @@ body {
   background-image: url('/desktop-left.png'), url('/desktop-right.png');
   background-position: left top, right top;
   background-repeat: no-repeat, no-repeat;
-  background-size: auto 100%, auto 100%;
+  background-size: var(--side-image-width) 100%, var(--side-image-width) 100%;
   background-attachment: fixed, fixed;
   min-height: 100dvh;
 }
@@ -76,15 +82,19 @@ p, a {
 
 .p {
   font-family: 'Times New Roman', Times, serif;
-  font-size: 20px;
+  font-size: var(--times-text-size);
   color: 	white;
 }
 
 .blog-text {
   font-family: 'Times New Roman', Times, serif;
-  font-size: 20px;
+  font-size: var(--times-text-size);
   color: 	white;
   white-space: pre-wrap;
+}
+
+.blog-text :where(p, li, a, blockquote) {
+  font-size: var(--times-text-size);
 }
 
 .postlink {
@@ -116,10 +126,10 @@ a {
 
 .skin {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   height: 100dvh;
-  padding-left: calc(var(--desktop-left-width) + var(--desktop-left-content-gap));
+  padding-left: 0;
 }
 
 .cover {
@@ -170,11 +180,38 @@ a {
   position: fixed;
 }
 
+.post-wrapper {
+  left: calc(var(--desktop-left-width) + var(--desktop-left-content-gap));
+  transform: none;
+  width: min(var(--content-lane-width), calc(100vw - 2rem));
+}
+
+.post-image {
+  display: block;
+  width: var(--post-media-width);
+  max-width: 100%;
+  height: auto;
+  margin: 1rem 0 0;
+}
+
+.post-audio {
+  display: block;
+  width: var(--post-media-width);
+  max-width: 100%;
+  margin-top: 1rem;
+}
+
 @media (max-width: 668px) {
 
   .wrapper {
     padding: 25px;
     position: static;
+  }
+
+  .post-wrapper {
+    left: auto;
+    transform: none;
+    width: auto;
   }
 
   .back-button {
