--- a/site/src/index.css
+++ b/site/src/index.css
@@ -157,7 +157,7 @@ a {
 
 .back-button {
   color: white;
-  font-size: 20px;
+  font-size: var(--times-text-size);
   position: fixed;
   bottom: 20px;
   left: calc(var(--desktop-left-width) + var(--desktop-left-content-gap));
@@ -202,6 +202,9 @@ a {
 }
 
 @media (max-width: 668px) {
+  :root {
+    --times-text-size: 18px;
+  }
 
   .wrapper {
     padding: 25px;
@@ -266,6 +269,10 @@ a {
 }
 
 @media (max-width: 450px) {
+  :root {
+    --times-text-size: 16px;
+  }
+
   .cover {
     width: 60%;
     margin-bottom: 20px;
